--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
-body, html {
+body {
   font-family: "Courier New";
-  margin: 0;
+  margin: 50px 0;
   text-align: center;
 }
 
@@ -11,15 +11,46 @@ canvas {
   border: 1px solid;
 }
 
-input[type=number] {
-  width: 50px;
-  margin: 0;
-}
-
 button {
   font-family: "Courier New";
 }
 
-.main-container {
-  margin-top: 50px;
+.action-button {
+  width: 100%;
+}
+
+.footer {
+  font-size: 75%;
+  color: #999999;
+}
+
+.footer a, .footer a:visited {
+  color: #999999;
+}
+
+.footer a:hover {
+  color: #ff0066;
+}
+
+.tools-container {
+  width: 100%;
+}
+
+.tools-container input[type=number] {
+  padding: 0;
+  width: 48px;
+  margin: 0;
+}
+
+.tools-container input[type=color] {
+  width: 50px;
+  padding: 0;
+  border: 0;
+  margin: 0;
+}
+
+.tools-container table {
+  margin: auto;
+  width: 500px;
+  text-align: left;
 }
