--- a/css/styles.css
+++ b/css/styles.css
@@ -38,12 +38,12 @@ button {
 
 .tools-container input[type=number] {
   padding: 0;
-  width: 48px;
+  max-width: 48px;
   margin: 0;
 }
 
 .tools-container input[type=color] {
-  width: 50px;
+  max-width: 50px;
   padding: 0;
   border: 0;
   margin: 0;
