--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
 body {
+  background: #f5f5f5;
   font-family: "Courier New";
   margin: 50px 0;
   text-align: center;
 }
 
 canvas {
-  background: #ffffff;
   display: block;
   margin: 0 auto;
   border: 1px solid;
@@ -15,17 +15,17 @@ button {
   font-family: "Courier New";
 }
 
-.action-button {
+.full-width-button {
   width: 100%;
 }
 
 .footer {
   font-size: 75%;
-  color: #999999;
+  color: #808080;
 }
 
 .footer a, .footer a:visited {
-  color: #999999;
+  color: #808080;
 }
 
 .footer a:hover {
@@ -33,7 +33,9 @@ button {
 }
 
 .tools-container {
-  width: 100%;
+  border: 1px solid;
+  max-width: 500px;
+  margin: 0 auto;
 }
 
 .tools-container input[type=number] {
@@ -51,6 +53,6 @@ button {
 
 .tools-container table {
   margin: auto;
-  width: 500px;
+  width: 100%;
   text-align: left;
 }
