--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
-body {
-  background: #f5f5f5;
+* {
   font-family: "Courier New";
+  font-size: 100%;
+}
+
+body {
+  background: #e5e5e5;
   margin: 50px 0;
   text-align: center;
 }
@@ -11,8 +15,29 @@ canvas {
   border: 1px solid;
 }
 
-button {
-  font-family: "Courier New";
+.action-button {
+  border: 1px solid;
+	background-color: #d1d1d1;
+	color: #000000;
+	display: inline-block;
+	font-size: 15px;
+  height: 25px;
+	text-decoration: none;
+	text-align: center;
+}
+
+.action-button:hover {
+	color:#ff0066;
+}
+
+.action-button:active {
+  background-color:#ff0066;
+  color: #ffffff;
+}
+
+.action-button:disabled {
+  background-color: #c3c3c3;
+  color: #a1a1a1;
 }
 
 .footer {
@@ -42,15 +67,29 @@ button {
 }
 
 .tools-container input[type=number] {
+  border: 1px solid;
+  box-sizing: border-box;
+  height: 25px;
+  margin: 0;
+  max-width: 50px;
   padding: 0;
-  max-width: 48px;
+  -moz-appearance: textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
   margin: 0;
 }
 
 .tools-container input[type=color] {
+  border: 1px solid;
+  box-sizing: border-box;
+  height: 25px;
   max-width: 50px;
   padding: 0;
-  border: 0;
+  position: relative;
+  top: 2px;
   margin: 0;
 }
 
@@ -58,9 +97,4 @@ button {
   margin: auto;
   width: 100%;
   text-align: left;
-}
-
-.tools-container .separator {
-  width: 1px;
-  background: #000000;
 }
