--- a/css/styles.css
+++ b/css/styles.css
@@ -17,21 +17,21 @@ canvas {
 
 .action-button {
   border: 1px solid;
-	background-color: #d1d1d1;
-	color: #000000;
-	display: inline-block;
-	font-size: 15px;
+  background-color: #d1d1d1;
+  color: #000000;
+  display: inline-block;
+  font-size: 15px;
   height: 25px;
-	text-decoration: none;
-	text-align: center;
+  text-decoration: none;
+  text-align: center;
 }
 
 .action-button:hover {
-	color:#ff0066;
+  color: #ff0066;
 }
 
 .action-button:active {
-  background-color:#ff0066;
+  background-color: #ff0066;
   color: #ffffff;
 }
 
@@ -45,7 +45,8 @@ canvas {
   color: #808080;
 }
 
-.footer a, .footer a:visited {
+.footer a,
+.footer a:visited {
   color: #808080;
 }
 
@@ -66,7 +67,7 @@ canvas {
   width: 50%;
 }
 
-.tools-container input[type=number] {
+.tools-container input[type="number"] {
   border: 1px solid;
   box-sizing: border-box;
   height: 25px;
@@ -82,7 +83,7 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-.tools-container input[type=color] {
+.tools-container input[type="color"] {
   border: 1px solid;
   box-sizing: border-box;
   height: 25px;
