--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,10 @@
 
 html,
 body {
+  font-size: 0.95em;
   background-color: #ddd;
   color: #333;
-  font-family: "Arial", sans-serif; }
+  font-family: "Courier New", sans-serif; }
 
 a {
   color: inherit;
