reordering tools, ui improvements

--- a/css/style.css
+++ b/css/style.css
@@ -51,30 +51,30 @@ header {
       height: auto;
       padding: 3px; }
 
+input {
+  font-family: inherit;
+  font-size: inherit;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  min-width: 3.5em;
+  max-width: 4.5em;
+  border: 1px solid;
+  position: relative;
+  background-color: inherit;
+  color: inherit; }
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0; }
 
-input[type="color"] {
-  background-color: inherit;
-  color: inherit;
-  border: 1px solid;
-  box-sizing: border-box;
-  height: 100%;
-  max-width: 50px;
-  position: relative; }
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0; }
 
-input[type="number"] {
-  background-color: inherit;
-  text-align: center;
-  color: inherit;
-  border: 1px solid;
-  box-sizing: border-box;
-  font-family: inherit;
-  font-size: inherit;
-  height: 100%;
-  max-width: 50px;
+input[type=number] {
   -moz-appearance: textfield; }
 
 .btn {
@@ -85,6 +85,8 @@ input[type="number"] {
   font-size: inherit;
   width: 100%;
   height: 100%;
+  min-width: 3.5em;
+  max-width: 4.5em;
   text-decoration: none;
   text-align: center; }
 
@@ -105,16 +107,26 @@ input[type="number"] {
   margin: 0 auto;
   padding: 0 2em; }
 
+.label {
+  text-align: right; }
+
+.heading {
+  font-weight: bold; }
+
 .tools-grid {
+  border: 1px solid;
+  overflow: hidden;
+  padding: 0.5em;
   display: grid;
   width: 100%;
   max-width: 100%;
+  text-align: center;
   margin: 1em 0;
-  column-gap: 0.5em;
+  column-gap: 0.2em;
   row-gap: 0.2em;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 25px 25px 25px;
-  grid-template-areas: "brush-label . . canvas-label . . history-label drawing-label" "size-label size-input shape-buttons width-label width-select width-apply undo-button save-button" "color-label color-select color-picker height-label height-select height-apply redo-button clear-button"; }
+  grid-template-areas: "color-label brush-label brush-label canvas-label canvas-label canvas-label history-label drawing-label" "color-select size-label size-input width-label width-select width-apply undo-button save-button" "color-picker shape-label shape-buttons height-label height-select height-apply redo-button clear-button"; }
 
 .brush-label {
   grid-area: brush-label; }
@@ -134,11 +146,18 @@ input[type="number"] {
 .size-input {
   grid-area: size-input; }
 
+.shape-label {
+  grid-area: shape-label; }
+
 .shape-buttons {
   grid-area: shape-buttons;
-  display: flex; }
+  display: flex;
+  justify-content: center; }
   .shape-buttons button {
-    width: 50%; }
+    width: 50%;
+    height: 100%;
+    min-width: 1.75em;
+    max-width: 2.25em; }
 
 .width-label {
   grid-area: width-label; }
